--- a/app/sonarr_prune.ini.example
+++ b/app/sonarr_prune.ini.example
@@ -2,11 +2,16 @@
 ENABLED = ON
 URL = http://192.168.1.1:8989
 TOKEN = xxxxxx
-TAGS_KEEP_MOVIES_ANYWAY = keep
+
+[SONARR2]
+ENABLED = ON
+URL = http://192.168.1.1:8989
+TOKEN = xxxxxx
 
 [PRUNE]
 ENABLED = OFF
 DRY_RUN = ON
+TAGS_KEEP_MOVIES_ANYWAY = keep
 REMOVE_SERIES_AFTER_DAYS = 30
 WARN_DAYS_INFRONT = 1
 ONLY_SHOW_REMOVE_MESSAGES = OFF
