--- a/app/sonarr_prune.ini.example
+++ b/app/sonarr_prune.ini.example
@@ -8,6 +8,10 @@ ENABLED = ON
 URL = http://192.168.1.1:8989
 TOKEN = xxxxxx
 
+[EMBY]
+EMBY_HOST = http://192.168.1.2:8096
+EMBY_SONARR_APIKEY = yyyyyyyy
+
 [PRUNE]
 ENABLED = OFF
 DRY_RUN = ON
