--- a/app/sonarr_prune.ini.example
+++ b/app/sonarr_prune.ini.example
@@ -9,8 +9,8 @@ URL = http://192.168.1.1:8989
 TOKEN = xxxxxx
 
 [EMBY]
-EMBY_HOST = http://192.168.1.2:8096
-EMBY_SONARR_APIKEY = yyyyyyyy
+URL = http://192.168.1.2:8096
+TOKEN = yyyyyyyy
 
 [PRUNE]
 ENABLED = OFF
