--- a/app/sonarr_prune.ini.example
+++ b/app/sonarr_prune.ini.example
@@ -18,6 +18,7 @@ ENABLED = OFF
 DRY_RUN = ON
 TAGS_KEEP_MOVIES_ANYWAY = keep
 REMOVE_SERIES_AFTER_DAYS = 30
+REMOVE_SERIES_DISK_PERCENTAGE = 80
 WARN_DAYS_INFRONT = 1
 ONLY_SHOW_REMOVE_MESSAGES = OFF
 VERBOSE_LOGGING = ON
